Trocou de estudante para advogado

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <tr>
               <td>Matheus</td>  
               <td>21</td>
-              <td>Estudante</td>
+              <td>Advogado</td>
             </tr>
             <tr>
             <td>Marcos</td>
